@@ -16,7 +16,7 @@
 
 	Code reorganization for better separation of concerns.
 
-	cfconvert removed. Change of strategy.
+	cfconvert removed. Change of future strategy.
 
 	ChecksumDatabase variable is not longer used.
 
@@ -33,6 +33,10 @@
 
 	Encryption level added for full encryption of opendir traffic.
 	Must set FullEncryption = ( true ) in control for compatability
+
+	server=none now signals noop in method execution.
+
+        Varstring expansion bug for nested variables.
 	
 2.1.21
 
